--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="shoutcut icon" type="x-icon" href="images/LOGO.png">
     <title>Aruna Priyankara</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/09f4f64ff2.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -28,6 +29,7 @@
             <ul class="menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="https://forestcodeera.blogspot.com/">Blog</a></li>
                 <li><a href="#service">My Projects</a></li>
                 <li><a href="#skills">Skills</a></li>
                 <li><a href="#contact">Contacts</a></li>
@@ -48,7 +50,7 @@
                 <!-- <a href="#">Download CV</a> -->
                 <div class="images">
                     <img src="images/shape1.png" class="shape">
-                    <img src="images/my_photo.png" class="my_photo">
+                    <img src="images/my_photo1.png" class="my_photo">
                 </div>
             </div>
         </div>
@@ -65,11 +67,17 @@
                 </div>
                 <div class="column right">
                     <div class="text">I'm Aruna and I'm a <span class="typing-2"></span></div>
-                    <p>I am currently pursuing a Software engineering undergraduate degree at the Sri Lanka Institute of
-                        Information Technology (SLIIT) I am interested in web development and having considerable
-                        experience in the software engineering field, I am seeking exciting opportunities related to the
-                        same.</p>
-                    <!-- <a href="#">Download CV</a> -->
+                    <p>Welcome to my portfolio website! My name is Aruna Priyankara, and I am currently pursuing a Software Engineering undergraduate degree at the Sri Lanka Institute of Information Technology (SLIIT). 
+                        <br><br>
+                        With a passion for web development, I have gained considerable experience in the software engineering field, and I am constantly seeking out new opportunities to hone my skills and knowledge. My expertise includes working with a variety of programming languages, such as Java, Python, JavaScript, and SQL.
+                        <br><br>
+                        Apart from my technical interests, I have a creative hobby of photography, which allows me to express myself and view the world in a unique way. I enjoy capturing moments and scenes that evoke emotions and tell a story through my lens.
+                        <br>
+                        
+                        <br>
+                        </p>
+                    <a href="https://arunaap.github.io/JsImgSlider/">Photo Gallary</a>
+                    <a class="btn2" href="https://arunaap.github.io/JsImgSlider/">Aruna Priyankara Photography</a>
                 </div>
             </div>
         </div>
@@ -293,6 +301,16 @@
                                 <div class="info">
                                     <div class="head">Linkedin</div>
                                     <div class="sub-title">https://www.linkedin.com/in/aruna-priyankara-93ba21216/</div>
+                            </a>
+                        </div>
+                    </div>
+                    <div class="icons">
+                        <div class="row">
+                            <a href="https://forestcodeera.blogspot.com/">
+                                <i class="fa-brands fa-blogger-b"></i>
+                                <div class="info">
+                                    <div class="head">Blog</div>
+                                    <div class="sub-title">https://forestcodeera.blogspot.com/</div>
                             </a>
                         </div>
                     </div>
